--- a/assets/index.html
+++ b/assets/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="header text-[#103178]">
+    <div class="header bg-white text-[#103178] sticky top-0 z-50">
         <div class="bodyTop bg-[#103178] flex justify-center text-[18px] text-[#FFC800] py-[8px] w-full">
             Due to the COVID 19 epidemic, orders may be processed with a slight delay
         </div>
@@ -45,7 +45,75 @@
         </div>
         <div class="border-t-2 border-from-gray-400"></div>
     </div>
-    <div class="body"></div>
-    <div class="footer"></div>
+    <div class="body w-full">
+        <div class="  pb-[62px] w-full">
+            <div class="bg-[#F0F2F5]">
+                <div class="banner  flex items-center mr-[20%] ml-[15%]">
+                    <div class="banner-right w-[50%]">
+                        <h1 class="text-[#103178] text-[62px]">Antivirus <br> Mask Store</h1>
+                        <p class="text-[#103178] my-[20px] text-[23px]">The easiest way to protect yourself</p>
+                        <div class="flex">
+                            <div class="w-[50%]">
+                                <i class="fa-solid fa-shield-heart"></i>
+                                <span>Anti-Bacterial</span>
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-earth-asia"></i>
+                                <span>Anti-Virus</span>
+                            </div>
+                        </div>
+                        <button class="bg-[#FFC800] mt-[20px] py-[13px] px-[46px] text-white font-bold rounded-[100px]">Shop now</button>
+                    </div>
+                    <div class="banner-left w-[50%] relative">
+                        <div class="rounded-full flex justify-center items-center bg-[#FFC800] text-[#103178] w-[140px] h-[140px] absolute top-[33px] right-[120px]">
+                            <div>
+                                <p class="text-[24px] flex justify-center">only</p>
+                                <p class="text-[48px]">$25</p>
+                            </div>
+                        </div>
+                        <img width="100%" src="./images/product1.jpg" alt="product1">
+                    </div>
+                </div>
+                
+            </div>
+            <div class="my-[80px]  flex justify-around items-center ml-[15%] mr-[15%]">
+                <div class=" box1 w-[32%] relative">
+                    <img class="h-full " src="./images/mbr.jpeg" alt="">
+                    <div class="absolute top-7 left-7">
+                        <div class="bg-[#13A05D]  text-white w-fit py-[3px] px-[14px] rounded-[100px] mb-[16px]">NEW</div>
+                        <h3 class="text-[32px] text-white font-bold">Antivirus</h3>
+                        <h3 class="text-[32px] text-white mb-[32px] font-bold">Mask</h3>
+                        <button class="bg-[#103178] mt-[20px] py-[13px] px-[46px] text-white font-bold rounded-[100px]">More</button>
+
+                    </div>
+                </div>
+                <div class="box2 w-[32%] relative bg-white">
+                    <img src="./images/product1.jpg" alt="">
+                    <div class="absolute top-7 left-7">
+                        <h3 class="text-[32px] text-[#103178] font-bold">Basic</h3>
+                        <h3 class="text-[32px] text-[#103178] font-bold">Mask</h3>
+                        <h2 class="text-[48px] text-[#FFC800] font-bold">30%</h2>
+                        <button class="bg-[#103178] mt-[20px] py-[13px] px-[46px] text-white font-bold rounded-[100px]">Show now</button>
+
+                    </div>
+                </div>
+                <div class="box3 w-[32%] relative">
+                    <img src="./images/mbr-3.jpg" alt="">
+                    <div class="absolute top-7 left-7">
+                        <h3 class="text-[32px] text-[#103178] font-bold">Medical Mask</h3>
+                        <h2 class="text-[48px] text-[#FFC800] font-bold">$15.99</h2>
+                        <del class="text-[23px] text-[#F0F2F5]">$29.99</del>
+                        <hr>
+                        <button class="bg-[#103178] mt-[20px] py-[13px] px-[46px] text-white font-bold rounded-[100px]">More</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer h-[1000px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur excepturi sed perspiciatis libero tenetur, ut quidem explicabo distinctio nihil asperiores, rem ratione, labore ab. Sit placeat quis commodi incidunt dolor?
+
+    </div>
+
 </body>
 </html>
