--- a/assets/index.html
+++ b/assets/index.html
@@ -233,13 +233,150 @@
           >
             <!-- <img src="./images/background23.jpg" class="w-fit" alt="bg23" /> -->
             <div class="text-white flex justify-center items-center">
-              <i class="fa-solid fa-shield-heart pr-[13px] "></i>
-              <span >100% Secure delivery without contacting the courier</span>
+              <i class="fa-solid fa-shield-heart pr-[13px]"></i>
+              <span>100% Secure delivery without contacting the courier</span>
             </div>
             <div class="flex justify-center items-center">
               <button
                 class="bg-[#13A05D] py-[13px] px-[46px] text-white font-bold rounded-[100px]"
-              >More</button>
+              >
+                More
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center items-center flex-col ml-[15%] mr-[20%] pt-[80px]">
+          <div class="text-[32px] text-[#103178] pb-[40px]">Featured products</div>
+          <div class="flex justify-center items-center text-[#103178]">
+            <div class="">
+              <img src="./images/features2.jpg" alt="" />
+              <div class="p-[16px]">
+                <p class="text-[17px]">Basic Mask</p>
+                <p class="text-[24px] font-bold">$1.99</p>
+                <p>
+                  <ul class="list-none flex items-center">
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            <div class="">
+              <img src="./images/features2.jpg" alt="" />
+              <div class="p-[16px]">
+                <p class="text-[17px]">Basic Mask</p>
+                <p class="text-[24px] font-bold">$1.99</p>
+                <p>
+                  <ul class="list-none flex items-center">
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            <div class="">
+              <img src="./images/features2.jpg" alt="" />
+              <div class="p-[16px]">
+                <p class="text-[17px]">Basic Mask</p>
+                <p class="text-[24px] font-bold">$1.99</p>
+                <p>
+                  <ul class="list-none flex items-center">
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            <div class="">
+              <img src="./images/features2.jpg" alt="" />
+              <div class="p-[16px]">
+                <p class="text-[17px]">Basic Mask</p>
+                <p class="text-[24px] font-bold">$1.99</p>
+                <p>
+                  <ul class="list-none flex items-center">
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            <div class="">
+              <img src="./images/features2.jpg" alt="" />
+              <div class="p-[16px]">
+                <p class="text-[17px]">Basic Mask</p>
+                <p class="text-[24px] font-bold">$1.99</p>
+                <p>
+                  <ul class="list-none flex items-center">
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                    <li class="m-0 p-[3px]">
+                      <i class="fa-regular fa-star text-[#FFC800]"></i>
+                    </li>
+                  </ul>
+                </p>
+              </div>
             </div>
           </div>
         </div>
